# InvincibleDataBase

./: CMakeLists.txt  main.cpp
Compressor/: Compressor.cpp  Compressor.h  Huffman_Node.cpp  Huffman_Node.h  Huffman_Tree.cpp  Huffman_Tree.h  List.h  NodeH.h
Master/: FileNames.txt  compress_Codigote.txt  compress_New.txt
Master/Photos/: MetaData.txt  Metadata_Code.txt  Metadata_Tree.txt
Master/galeria2/: MetaData.txt
Master/vacaciones/: MetaData.txt  Metadata_Code.txt  Metadata_Tree.txt
Objects/: DataBase.cpp  DataBase.h  Image.cpp  Image.h  JManager.cpp  JManager.h
Structures/: AVLTree.cpp  AVLTree.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h
Structures2/: LinkedList.h
Tests/: test.cpp
server/: requestHandler.h
